Fix scrollbar size and code structure theme overide

--- a/src/main.scss
+++ b/src/main.scss
@@ -136,6 +136,7 @@ $typoOptions: display-4 display-3 display-2 display-1 headline title subtitle-1
 
 /* iframe */
 iframe {
+  display: block;
   border-style: solid;
   border-width: 0;
 }
@@ -143,4 +144,10 @@ iframe {
 /* svg */
 svg {
   display: block;
+}
+
+/* scroolbar */
+.fullpage ::-webkit-scrollbar {
+  width: 20px;
+  height: 20px;
 }
